compiler/tests/success/otbn/intrinsic_and.jazz
export
fn and(reg u32 arg0 arg1) {
    reg u32 x;
    x = #AND(arg0, arg1);
    [x] = x;
}
